--- a/curve_fever_client/index.html
+++ b/curve_fever_client/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Snake Wasm</title>
+        <title>Curve Fever Wasm</title>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Lato&display=swap" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
